# duckdb-upgrade

./: .gitmodules  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml  vendor.yaml
scripts/: program-data
src/duckdb_upgrade/: __main__.py  platform.py  versions.py
tests/: test_platform.py  test_versions.py
