[project]
name = "duckdb-upgrade"
version = "0.7.0"
description = "A tool to upgrade DuckDB database files."
authors = [
    {name = "Nick Pleatsikas", email = "nick@pleatsikas.me"},
]
dependencies = [
    "packaging>=23.1",
    "requests>=2.31.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.7.0",
]
test = [
    "pytest>=7.4.3",
]

[tool.pdm.scripts]
duckdb-upgrade = {call = "src.duckdb_upgrade.__main__:main"}

test = {composite = [
    "pytest --ignore=vendor/"
]}

[tool.pdm.build]
includes = [
    "src",
    "src/duckdb_upgrade/data/version_map.json"
]

[project.scripts]
duckdb-upgrade = "duckdb_upgrade.__main__:main"
